squashing bugs

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -297,7 +297,7 @@ h3 {
 
 .recipes-text {
   font-size: 24px;
-  width: 500px;
+  max-width: 500px;
 }
 
 .single-benefit {
